# EthanComputer

./: .env.example  .gitignore  CLAUDE.md  HANDLE_SPEC.md  README.md  STATUS.md  SYSTEM_PROMPTS.md  agent.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
Workspace/Ethan/: CRAFT.md  SOUL.md  USER.md
artifacts/ethan/: artifact-dev-task-breakdown-ethan.md  artifact.dev.task.breakdown.ethan.md
data/artifacts/: 帮我用-Python-写一个快速排序函数要求支持自定义比较.yaml
docs/: DesignSpec.md
runs/logs/: run_0001.yaml  run_0002.yaml  run_0003.yaml  run_0004.yaml  run_0005.yaml  run_0006.yaml  run_0007.yaml  run_0008.yaml  run_0009.yaml  run_0010.yaml
runs/sessions/: run_0001.jsonl  run_0002.jsonl  run_0003.jsonl  run_0004.jsonl  run_0005.jsonl  run_0006.jsonl  run_0007.jsonl  run_0008.jsonl  run_0009.jsonl  run_0010.jsonl
scripts/: debug-api.ts  e2e_test.py  run-mvp.ts  verify-craft.ts  verify-step2.d.ts  verify-step2.d.ts.map  verify-step2.js  verify-step2.js.map  verify-step2.ts  verify-step3.ts  verify-step5.ts  verify-tui.ts
skills/local/create-skill/: SKILL.md
skills/local/dev-task-breakdown/: SKILL.md
skills/local/dev.task.breakdown/: SKILL.md
src/ethan_computer/: __init__.py  agent.py  artifact_library.py  config.py  craft_agent.py  models.py  session_init.py  user_profile.py
src/ethan_computer/tools/: artifact_tools.py  profile_tools.py
tests/: test_session_init.py
